--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -51,7 +51,7 @@
                 <input type="text" class="form-control mb-2 mr-5" id="inputDatum" onkeyup="filterReportTable()"
                        placeholder="Datum">
                 <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()"
-                       placeholder="Hochgeladen von">
+                       placeholder="Arzt">
             </form>
         </div>
         <div class="col-2">
