Test vom Report Upload

--- a/oshealthrec-website/public/doktor/hochladen.html
+++ b/oshealthrec-website/public/doktor/hochladen.html
@@ -50,7 +50,7 @@
                 <input type="file" class="form-control-file mb-2" id="datei">
                 <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
                 <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
-                <button type="button" class="btn btn-primary">Hochladen</button>
+                <button type="button" class="btn btn-primary" onclick="uploadReport()">Hochladen</button>
             </form>
         </div>
     </div>
@@ -61,6 +61,10 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-storage.js"></script>
 
 <script src="../app.js"></script>
 <script type="text/javascript" src="../firebaseConfig.json"></script>
