--- a/oshealthrec-website/public/doktor/hochladen.html
+++ b/oshealthrec-website/public/doktor/hochladen.html
@@ -48,7 +48,7 @@
         <div class="col-sm-5">
             <form class="mt-3">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated mb-3" id="progressbar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 75%; display: none"></div>
                 </div>
                 <input type="file" class="form-control-file mb-2" id="datei">
                 <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
