--- a/oshealthrec-website/public/doktor/hochladen.html
+++ b/oshealthrec-website/public/doktor/hochladen.html
@@ -47,8 +47,8 @@
     <div class="row">
         <div class="col-sm-5">
             <form class="mt-3">
-                <div class="progress mb-3 hidden" id="progressbar">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                <div class="progress mb-3 hidden">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"  id="progressbar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                 </div>
                 <input type="file" class="form-control-file mb-2" id="datei">
                 <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
