Download Button eingefügt

--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -59,6 +59,7 @@
                         <th scope="col">Beschreibung</th>
                         <th scope="col">Datum</th>
                         <th scope="col">Hochgeladen von</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody id="reportTabelle">
