Downloadfunktion für Ärzte eingefügt

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -79,49 +79,52 @@
             </dl>
         </div>
     </div>
-        <div class="row">
-            <div class="col-sm-9">
-                <table class="table table-hover mt-3">
-                    <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Titel</th>
-                        <th scope="col">Beschreibung</th>
-                        <th scope="col">Datum</th>
-                        <th scope="col">Arzt</th>
-                        <th scope="col">Hochgeladen von</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody id="reportTabelle">
+    <div class="row">
+        <div class="col-sm-9">
+            <table class="table table-hover mt-3">
+                <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Titel</th>
+                    <th scope="col">Beschreibung</th>
+                    <th scope="col">Datum</th>
+                    <th scope="col">Arzt</th>
+                    <th scope="col">Hochgeladen von</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody id="reportTabelle">
 
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-sm-3">
-                <form class="form-group">
-                    <button type="button" class="btn btn-primary mt-3 btn-block freigaben-button">Herunterladen</button>
-                    <br/>
-                    <button type="button" class="btn btn-primary btn-block freigaben-button"
-                            onclick="window.location.href='/doktor/hochladen.html'">Hochladen
-                    </button>
-                </form>
-            </div>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-3">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
+                </button>
+            </form>
         </div>
     </div>
+</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-    <script src="../app.js"></script>
+<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.4.1/firebase-storage.js"></script>
+
+<script src="../app.js"></script>
+<script type="text/javascript" src="../firebaseConfig.json"></script>
 </body>
 </html>
