--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -54,7 +54,9 @@
                        placeholder="Arzt">
             </form>
         </div>
-        <div class="col-6">
+        <div class="col-2">
+        </div>
+        <div class="col-4">
             <dl class="row">
                 <dt class="col-sm-3">Vorname</dt>
                 <dd class="col-sm-9" id="vorname"></dd>
