--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -58,23 +58,23 @@
         </div>
         <div class="col-6">
             <dl class="row">
-                <dt class="col-sm-4">Vorname</dt>
-                <dd class="col-sm-8" id="vorname"></dd>
+                <dt class="">Vorname</dt>
+                <dd class="" id="vorname"></dd>
 
-                <dt class="col-sm-4">Nachname</dt>
-                <dd class="col-sm-8" id="nachname"></dd>
+                <dt class="">Nachname</dt>
+                <dd class="" id="nachname"></dd>
 
-                <dt class="col-sm-4">Geschlecht</dt>
-                <dd class="col-sm-8" id="geschlecht"></dd>
+                <dt class="">Geschlecht</dt>
+                <dd class="" id="geschlecht"></dd>
 
-                <dt class="col-sm-4">Geburtsdatum</dt>
-                <dd class="col-sm-8" id="geburtsdatum"></dd>
+                <dt class="">Geburtsdatum</dt>
+                <dd class="" id="geburtsdatum"></dd>
 
-                <dt class="col-sm-4">Blutgruppe</dt>
-                <dd class="col-sm-8" id="blutgruppe"></dd>
+                <dt class="">Blutgruppe</dt>
+                <dd class="" id="blutgruppe"></dd>
 
-                <dt class="col-sm-4">Notfallkontakt</dt>
-                <dd class="col-sm-8" id="notfallkontakt"></dd>
+                <dt class="">Notfallkontakt</dt>
+                <dd class="" id="notfallkontakt"></dd>
             </dl>
         </div>
         <div class="col-sm-2">
