--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -54,8 +54,9 @@
                        placeholder="Arzt">
             </form>
         </div>
-
-        <div class="col-6">
+        <div class="col-1">
+        </div>
+        <div class="col-5">
             <dl class="row">
                 <dt class="col-sm-4">Vorname</dt>
                 <dd class="col-sm-8" id="vorname"></dd>
