--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -77,7 +77,7 @@
                 <dd class="col-sm-8" id="notfallkontakt"></dd>
             </dl>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 align-bottom">
             <form class="form-group">
                 <button type="button" class="btn btn-primary btn-block freigaben-button"
                         onclick="window.location.href='/doktor/hochladen.html'">Hochladen
