--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -77,12 +77,14 @@
                 <dd class="col-sm-8" id="notfallkontakt"></dd>
             </dl>
         </div>
-        <div class="col-sm-2 align-bottom">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
-                </button>
-            </form>
+        <div class="col-sm-2">
+            <div class=" align-bottom">
+                <form class="form-group">
+                    <button type="button" class="btn btn-primary btn-block freigaben-button"
+                            onclick="window.location.href='/doktor/hochladen.html'">Hochladen
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
     <div class="row">
